# SpellChecker

./: Cargo.toml  report.txt
dictionaries/: small_dict.tsv
reports/: report.txt
src/: bktree.rs  bloomfilter.rs  data.rs  main.rs  med.rs  spellchecker.rs
texter/: kort1.txt
