[package]
name = "spell_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
ahash = "0.8.7"
indextree = "4.6.0"
serde = { version = "1.0.195", features = ["derive"] }
unicode-segmentation = "1.10.1"
clap = { version = "4.5.0", features = ["derive"] }
